Check whether a transient of an inactive window can be activated differently

Since the ActivateRaiseOnReleaseAndPassClick action is no longer applied
when you click a decoration button, the window will remain inactive when
you press a decoration button. Since the window is inactive and an
activation token gets generated for button events, it's possible that
the app icon will start bounce.

This issue can also be observed when you use the Plastik decoration
theme and minimize an inactive window. However, with the recent changes,
this bug can be observed with Breeze too.

The culprit is that we want "save changes" dialogs of inactive windows
to be activated after the user clicks the close button. At the moment,
kwin generates an activation token for every button press and release if
the corresponding event is not handled by the decoration. However, the
activation tokens are generated with app ids so they are interpreted as
if they are used to launch an app.

This change takes a slightly different approach to solve that case. We
can check usage serials. It's less precise but the current solution is
fuzzy as well. As a bonus, it makes sure that the transient of an
inactive parent heuristic is going to work with all supported input
device types, not just pointers.

BUG: 516264
(cherry picked from commit fa4106c8fec957f81f89b9b27fe30de9449043bc)